--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@nestjs/core": "^7.0.11",
     "@nestjs/cqrs": "^7.0.0",
     "@nestjs/platform-express": "^7.0.11",
+    "@vendia/serverless-express": "^4.3.1",
+    "bcryptjs": "^2.4.3",
     "cli-color": "^2.0.0",
+    "express": "^4.17.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.5"
   },
