--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@nestjs/cqrs": "^7.0.0",
     "@nestjs/platform-express": "^7.0.11",
     "@vendia/serverless-express": "^4.3.1",
+    "aws-lambda": "^1.0.6",
+    "aws-serverless-express": "^3.4.0",
     "bcryptjs": "^2.4.3",
     "cli-color": "^2.0.0",
     "express": "^4.17.1",
